--- a/new.ipynb
+++ b/new.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "3326e5cb",
    "metadata": {},
    "outputs": [],
@@ -37,8 +37,7 @@
     "from torchvision.transforms import Compose, Lambda, CenterCrop\n",
     "from torchvision.models.feature_extraction import create_feature_extractor\n",
     "from pytorchvideo.transforms import Normalize, UniformTemporalSubsample, ShortSideScale\n",
-    "# Load the .mkv file\n",
-    "import zipfile"
+    "# Load the .mkv file"
    ]
   },
   {
