push new changes

--- a/algonauts-2025-challenge.ipynb
+++ b/algonauts-2025-challenge.ipynb
@@ -2544,7 +2544,7 @@
     "\n",
     "# Saving directories\n",
     "save_dir_temp = \"./visual_features\"\n",
-    "save_dir_features = root_data_dir + \"/stimulus_features/stimulus_features/raw/visual/\"\n",
+    "save_dir_features = root_data_dir + \"stimulus_features/raw/visual/\"\n",
     "\n",
     "# Execute visual feature extraction\n",
     "visual_features = extract_visual_features(episode_path, tr, feature_extractor,\n",
@@ -2855,14 +2855,14 @@
    "outputs": [],
    "source": [
     "# As an example, extract audio features using season 1, episode 1 of Friends\n",
-    "episode_path = root_data_dir + \"/algonauts_2025.competitors/algonauts_2025.competitors/stimuli/movies/friends/s1/friends_s01e01a.mkv\"\n",
+    "episode_path = root_data_dir + \"/algonauts_2025.competitors/stimuli/movies/friends/s1/friends_s01e01a.mkv\"\n",
     "\n",
     "# Duration of each movie chunk, aligned with the fMRI TR of 1.49 seconds\n",
     "tr = 1.49\n",
     "\n",
     "# Saving directories\n",
     "save_dir_temp = \"./audio_features\"\n",
-    "save_dir_features = root_data_dir + \"/stimulus_features/stimulus_features/raw/audio/\"\n",
+    "save_dir_features = root_data_dir + \"/stimulus_features/raw/audio/\"\n",
     "\n",
     "# Execute audio feature extraction\n",
     "audio_features = extract_audio_features(episode_path, tr, device,\n",
@@ -3428,7 +3428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3464,7 +3464,7 @@
     "episode_path = root_data_dir + \"/algonauts_2025.competitors/algonauts_2025.competitors/stimuli/transcripts/friends/s1/friends_s01e01a.tsv\"\n",
     "\n",
     "# Saving directory\n",
-    "save_dir_features = root_data_dir +  \"stimulus_features/stimulus_features/raw/language/\"\n",
+    "save_dir_features = root_data_dir +  \"stimulus_features/raw/language/\"\n",
     "\n",
     "# Other parameters\n",
     "num_used_tokens = 510\n",
@@ -3645,7 +3645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-04-09T12:16:18.363725Z",
@@ -3678,7 +3678,7 @@
     "    \"\"\"\n",
     "\n",
     "    ### Get the stimulus features file directory ###\n",
-    "    data_dir = os.path.join(root_data_dir, 'stimulus_features/stimulus_features', 'raw', modality,\n",
+    "    data_dir = os.path.join(root_data_dir, 'stimulus_features', 'raw', modality,\n",
     "        'friends_s01e01a_features_'+modality+'.h5')\n",
     "\n",
     "    ### Load the stimulus features ###\n",
@@ -3971,7 +3971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-04-09T12:17:03.775721Z",
@@ -4007,19 +4007,19 @@
     "\n",
     "    ### Load the visual features ###\n",
     "    if modality == 'visual' or modality == 'all':\n",
-    "        stimuli_dir = os.path.join(root_data_dir,'stimulus_features', 'stimulus_features', 'pca',\n",
+    "        stimuli_dir = os.path.join(root_data_dir,'stimulus_features', 'pca',\n",
     "            'friends_movie10', 'visual', 'features_train.npy')\n",
     "        features['visual'] = np.load(stimuli_dir, allow_pickle=True).item()\n",
     "\n",
     "    ### Load the audio features ###\n",
     "    if modality == 'audio' or modality == 'all':\n",
-    "        stimuli_dir = os.path.join(root_data_dir,'stimulus_features', 'stimulus_features', 'pca',\n",
+    "        stimuli_dir = os.path.join(root_data_dir,'stimulus_features', 'pca',\n",
     "            'friends_movie10', 'audio', 'features_train.npy')\n",
     "        features['audio'] = np.load(stimuli_dir, allow_pickle=True).item()\n",
     "\n",
     "    ### Load the language features ###\n",
     "    if modality == 'language' or modality == 'all':\n",
-    "        stimuli_dir = os.path.join(root_data_dir, 'stimulus_features','stimulus_features', 'pca',\n",
+    "        stimuli_dir = os.path.join(root_data_dir, 'stimulus_features', 'pca',\n",
     "            'friends_movie10', 'language', 'features_train.npy')\n",
     "        features['language'] = np.load(stimuli_dir, allow_pickle=True).item()\n",
     "\n",
@@ -6004,7 +6004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 145,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -6029,7 +6029,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[33], line 50\u001b[0m\n\u001b[1;32m     47\u001b[0m     colorbar\u001b[38;5;241m.\u001b[39mset_label(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPearson\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ms $r$\u001b[39m\u001b[38;5;124m\"\u001b[39m, rotation\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m90\u001b[39m, labelpad\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m12\u001b[39m, fontsize\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m12\u001b[39m)\n\u001b[1;32m     48\u001b[0m     plotting\u001b[38;5;241m.\u001b[39mshow()\n\u001b[0;32m---> 50\u001b[0m compute_encoding_accuracy(\u001b[43mfmri_val\u001b[49m, fmri_val_pred, subject, modality)\n",
+      "Cell \u001b[0;32mIn[145], line 50\u001b[0m\n\u001b[1;32m     47\u001b[0m     colorbar\u001b[38;5;241m.\u001b[39mset_label(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPearson\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ms $r$\u001b[39m\u001b[38;5;124m\"\u001b[39m, rotation\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m90\u001b[39m, labelpad\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m12\u001b[39m, fontsize\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m12\u001b[39m)\n\u001b[1;32m     48\u001b[0m     plotting\u001b[38;5;241m.\u001b[39mshow()\n\u001b[0;32m---> 50\u001b[0m compute_encoding_accuracy(\u001b[43mfmri_val\u001b[49m, fmri_val_pred, subject, modality)\n",
       "\u001b[0;31mNameError\u001b[0m: name 'fmri_val' is not defined"
      ]
     }
@@ -6434,7 +6434,7 @@
     "    # and fMRI samples for a better correspondence between input stimuli and the\n",
     "    # brain response. For example, with a hrf_delay of 3, if the stimulus chunk\n",
     "    # of interest is 17, the corresponding fMRI sample will be 20.\n",
-    "    hrf_delay = 3\n",
+    "    hrf_delay = 4\n",
     "\n",
     "    ### Stimulus window ###\n",
     "    # stimulus_window indicates how many stimulus feature samples are used to\n",
@@ -6451,7 +6451,7 @@
     "    # used to train and validate the fMRI encoding models. Here you will use a\n",
     "    # value of 5, since this is how the challenge baseline encoding models were\n",
     "    # trained.\n",
-    "    stimulus_window = 5 \n",
+    "    stimulus_window = 5\n",
     "\n",
     "    ### Loop over subjects ###\n",
     "    subjects = [1, 2, 3, 5]\n",
@@ -6489,19 +6489,19 @@
     "                        # N is defined by the 'stimulus_window' variable), model\n",
     "                        # the fMRI sample using the first N stimulus feature\n",
     "                        # samples\n",
-    "                        if s < (stimulus_window + hrf_delay):\n",
+    "                        if s < (stimulus_window + hrf_delay + 2 ):\n",
     "                            idx_start = 0\n",
-    "                            idx_end = idx_start + stimulus_window\n",
+    "                            idx_end = idx_start + stimulus_window \n",
     "                        else:\n",
     "                            idx_start = s - hrf_delay - stimulus_window + 2\n",
-    "                            idx_end = idx_start + stimulus_window\n",
+    "                            idx_end = idx_start + stimulus_window \n",
     "                        # In case there are less visual/audio feature samples\n",
     "                        # than fMRI samples minus the hrf_delay, use the last N\n",
     "                        # visual/audio feature samples available (where N is\n",
     "                        # defined by the 'stimulus_window' variable)\n",
     "                        if idx_end > len(features_friends_s7[mod][epi]):\n",
     "                            idx_end = len(features_friends_s7[mod][epi])\n",
-    "                            idx_start = idx_end - stimulus_window\n",
+    "                            idx_start = idx_end - stimulus_window \n",
     "                        f = features_friends_s7[mod][epi][idx_start:idx_end]\n",
     "                        f_all = np.append(f_all, f.flatten())\n",
     "\n",
@@ -6517,11 +6517,11 @@
     "                        if s < hrf_delay:\n",
     "                            idx = 0\n",
     "                        else:\n",
-    "                            idx = s - hrf_delay\n",
+    "                            idx = s - hrf_delay - 2\n",
     "                        # In case there are fewer language feature samples than\n",
     "                        # fMRI samples minus the hrf_delay, use the last\n",
     "                        # language feature sample available\n",
-    "                        if idx >= (len(features_friends_s7[mod][epi]) - hrf_delay):\n",
+    "                        if idx >= (len(features_friends_s7[mod][epi]) - hrf_delay -2):\n",
     "                            f = features_friends_s7[mod][epi][-1,:]\n",
     "                        else:\n",
     "                            f = features_friends_s7[mod][epi][idx]\n",
@@ -6534,12 +6534,12 @@
     "            aligned_features_friends_s7[f'sub-0{sub}'][epi] = np.asarray(\n",
     "                features_epi, dtype=np.float32)\n",
     "\n",
-    "    return aligned_features_friends_s7"
+    "    return aligned_features_friends_s7\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 141,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -6573,7 +6573,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a8cd0aacd3d248d19b2972f5a6634386",
+       "model_id": "881092a9fcbc4ee182ff89cec05b1d5f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -6619,6 +6619,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([34.391457  , -8.291024  , -9.969074  , ..., -0.09165251,\n",
+       "        0.04794416,  0.12530692], dtype=float32)"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val[episode_name][0]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "2hkianSNims8"
@@ -6631,7 +6652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 138,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-04-09T12:23:03.339687Z",
@@ -6692,7 +6713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 142,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -6726,7 +6747,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "27b1c422434e40d6a74d4ac275742bcc",
+       "model_id": "a6e53781f8ea4826b4bf759bd372cdb9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -6762,7 +6783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 134,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -7019,7 +7040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 135,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -7060,15 +7081,6 @@
     "    zipf.write(output_file, os.path.basename(output_file))\n",
     "print(f\"Submission file successfully zipped as: {zip_file}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "trusted": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
