--- a/generalisation.ipynb
+++ b/generalisation.ipynb
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "5ff6dea7",
    "metadata": {},
    "outputs": [
@@ -589,7 +589,6 @@
    "source": [
     "backend = set_backend(\"torch_cuda\", on_error=\"warn\")\n",
     "alphas = np.logspace(1, 20, 20)\n",
-    "\n",
     "pipeline = make_pipeline(\n",
     "    StandardScaler(with_mean=True, with_std=False),\n",
     "    Delayer(delays=[1, 2, 3, 4]),\n",
@@ -1029,7 +1028,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py39",
+   "display_name": "env",
    "language": "python",
    "name": "python3"
   },
@@ -1043,7 +1042,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
